--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@
 
 Thumbs.db
 
-/Trailbreaker/bin
-/Trailbreaker/obj
-/Trailbreaker/debug
+/TrailbreakerMinimal/bin
+/TrailbreakerMinimal/obj
+/TrailbreakerMinimal/debug
 /bin
 /obj
 /debug
